[gd_scene load_steps=4 format=3 uid="uid://bl42b85ecpo53"]

[ext_resource type="Script" uid="uid://b48tv30o5mnqu" path="res://scenes/tile.gd" id="1_3dk36"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ywnoi"]
size = Vector2(39.6244, 40)

[sub_resource type="LabelSettings" id="LabelSettings_3dk36"]
font_color = Color(0, 0.0392157, 0.0392157, 1)

[node name="tile" type="Area2D" groups=["group_tiles"]]
script = ExtResource("1_3dk36")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(-2.50001, 2.5)
scale = Vector2(0.905058, 0.9)
color = Color(0.9, 0.9, 0.9, 1)
polygon = PackedVector2Array(-19.3358, -25, 24.8603, -25, 24.8603, 19.4444, -19.3358, 19.4444)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.995414, 1)
shape = SubResource("RectangleShape2D_ywnoi")

[node name="ray_up" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, -24)
collide_with_areas = true

[node name="ray_up_right" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(23, -23)
collide_with_areas = true

[node name="ray_right" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(24, 0)
collide_with_areas = true

[node name="ray_down_right" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(23, 23)
collide_with_areas = true

[node name="ray_down" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, 24)
collide_with_areas = true

[node name="ray_down_left" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(-23, 23)
collide_with_areas = true

[node name="ray_left" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(-24, 0)
collide_with_areas = true

[node name="ray_up_left" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(-23, -23)
collide_with_areas = true

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -5.0
offset_top = -12.0
offset_right = 35.0
offset_bottom = 11.0
text = "0"
label_settings = SubResource("LabelSettings_3dk36")
